output/gramatica.output
Estado 173 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 Programa: Cabecera_programa bloque

    2 bloque: LEFT_KEY Declar_de_variables_locales Declar_de_subprogs Sentencias RIGHT_KEY

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    4                   | %empty

    5 Declar_subprog: Cabecera_subprograma bloque

    6 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR
    7                            | %empty

    8 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    9 Variables_locales: Variables_locales Cuerpo_declar_variables
   10                  | Cuerpo_declar_variables

   11 Cuerpo_declar_variables: tipo list_id SEMICOLON

   12 Cabecera_subprograma: tipo ID LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

   13 argumentos: argumentos COMA argumento
   14           | argumento
   15           | %empty

   16 argumento: tipo ID

   17 Sentencias: Sentencias Sentencia
   18           | Sentencia

   19 Sentencia: bloque
   20          | sentencia_contador
   21          | sentencia_asignacion
   22          | sentencia_if
   23          | sentencia_while
   24          | sentencia_entrada
   25          | sentencia_salida
   26          | sentencia_return
   27          | sentencia_for
   28          | sentencia_list

   29 sentencia_contador: PLUSPLUS expresion SEMICOLON
   30                   | MINUSMINUS expresion SEMICOLON
   31                   | expresion PLUSPLUS SEMICOLON
   32                   | expresion MINUSMINUS SEMICOLON

   33 sentencia_asignacion: ID ASSIGN expresion SEMICOLON

   34 sentencia_if: IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   35             | IF LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

   36 sentencia_while: WHILE LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

   37 sentencia_entrada: IN CADENA COMA list_id SEMICOLON
   38                  | IN list_id SEMICOLON

   39 sentencia_salida: OUT list_expresiones_o_cadena SEMICOLON

   40 sentencia_return: RETURN expresion SEMICOLON

   41 sentencia_for: FOR ID ASSIGN_FOR constante TO constante DO bloque

   42 sentencia_list: expresion LIST_OP
   43               | DOLLAR expresion

   44 expresion: NEG_COUNT_QUEST expresion
   45          | SYMBOL_OP expresion
   46          | expresion SYMBOL_OP expresion
   47          | expresion BINARY_OP expresion
   48          | expresion AND_OP expresion
   49          | expresion OR_OP expresion
   50          | expresion XOR_OP expresion
   51          | expresion RELATION_OP expresion
   52          | expresion EQUALS_OP expresion
   53          | expresion AT expresion
   54          | expresion MINUSMINUS expresion
   55          | ID
   56          | constante
   57          | funcion
   58          | expresion PLUSPLUS expresion AT AT expresion
   59          | LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS

   60 funcion: ID LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   61        | ID LEFT_PARENTHESIS RIGHT_PARENTHESIS

   62 list_expresiones_o_cadena: list_expresiones_o_cadena COMA exp_cad
   63                          | exp_cad

   64 exp_cad: expresion
   65        | CADENA

   66 constante: CONST_INT
   67          | CONST_DOUBLE
   68          | CONST_CHAR
   69          | CONST_BOOLEAN
   70          | const_list_int
   71          | const_list_double
   72          | const_list_boolean
   73          | const_list_char

   74 list_expresiones: list_expresiones COMA expresion
   75                 | expresion

   76 tipo: tipo_elemental
   77     | LIST_OF tipo_elemental

   78 tipo_elemental: BASIC_TYPES

   79 const_list_int: LEFT_BRACKET list_int RIGHT_BRACKET

   80 list_int: list_int COMA CONST_INT
   81         | CONST_INT

   82 const_list_double: LEFT_BRACKET list_double RIGHT_BRACKET

   83 list_double: list_double COMA CONST_DOUBLE
   84            | CONST_DOUBLE

   85 const_list_boolean: LEFT_BRACKET list_boolean RIGHT_BRACKET

   86 list_boolean: list_boolean COMA CONST_BOOLEAN
   87             | CONST_BOOLEAN

   88 const_list_char: LEFT_BRACKET list_char RIGHT_BRACKET

   89 list_char: list_char COMA CONST_CHAR
   90          | CONST_CHAR

   91 list_id: list_id COMA ID
   92        | ID


Terminales con las reglas donde aparecen

$end (0) 0
error (256)
MAIN (258) 8
RIGHT_PARENTHESIS (259) 8 12 34 35 36 59 60 61
LEFT_KEY (260) 2
RIGHT_KEY (261) 2
LEFT_BRACKET (262) 79 82 85 88
RIGHT_BRACKET (263) 79 82 85 88
SEMICOLON (264) 11 29 30 31 32 33 37 38 39 40
COMA (265) 13 37 62 74 80 83 86 89 91
ASSIGN (266) 33
IF (267) 34 35
THEN (268) 34 35
ELSE (269) 35
WHILE (270) 36
RETURN (271) 40
FOR (272) 41
ASSIGN_FOR (273) 41
TO (274) 41
DO (275) 41
OUT (276) 39
IN (277) 37 38
INITVAR (278) 6
ENDVAR (279) 6
LIST_OF (280) 77
BASIC_TYPES (281) 78
CONST_INT (282) 66 80 81
CONST_DOUBLE (283) 67 83 84
CONST_BOOLEAN (284) 69 86 87
CONST_CHAR (285) 68 89 90
CADENA (286) 37 65
ID (287) 12 16 33 41 55 60 61 91 92
OR_OP (288) 49
AND_OP (289) 48
XOR_OP (290) 50
EQUALS_OP (291) 52
RELATION_OP (292) 51
SYMBOL_OP (293) 45 46
BINARY_OP (294) 47
NEG_COUNT_QUEST (295) 44
MINUSMINUS (296) 30 32 54
PLUSPLUS (297) 29 31 58
DOLLAR (298) 43
LIST_OP (299) 42
AT (300) 53 58
LEFT_PARENTHESIS (301) 8 12 34 35 36 59 60 61


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
Programa (48)
    en la izquierda: 1, en la derecha: 0
bloque (49)
    en la izquierda: 2, en la derecha: 1 5 19 41
Declar_de_subprogs (50)
    en la izquierda: 3 4, en la derecha: 2 3
Declar_subprog (51)
    en la izquierda: 5, en la derecha: 3
Declar_de_variables_locales (52)
    en la izquierda: 6 7, en la derecha: 2
Cabecera_programa (53)
    en la izquierda: 8, en la derecha: 1
Variables_locales (54)
    en la izquierda: 9 10, en la derecha: 6 9
Cuerpo_declar_variables (55)
    en la izquierda: 11, en la derecha: 9 10
Cabecera_subprograma (56)
    en la izquierda: 12, en la derecha: 5
argumentos (57)
    en la izquierda: 13 14 15, en la derecha: 8 12 13
argumento (58)
    en la izquierda: 16, en la derecha: 13 14
Sentencias (59)
    en la izquierda: 17 18, en la derecha: 2 17
Sentencia (60)
    en la izquierda: 19 20 21 22 23 24 25 26 27 28, en la derecha:
    17 18 34 35 36
sentencia_contador (61)
    en la izquierda: 29 30 31 32, en la derecha: 20
sentencia_asignacion (62)
    en la izquierda: 33, en la derecha: 21
sentencia_if (63)
    en la izquierda: 34 35, en la derecha: 22
sentencia_while (64)
    en la izquierda: 36, en la derecha: 23
sentencia_entrada (65)
    en la izquierda: 37 38, en la derecha: 24
sentencia_salida (66)
    en la izquierda: 39, en la derecha: 25
sentencia_return (67)
    en la izquierda: 40, en la derecha: 26
sentencia_for (68)
    en la izquierda: 41, en la derecha: 27
sentencia_list (69)
    en la izquierda: 42 43, en la derecha: 28
expresion (70)
    en la izquierda: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59,
    en la derecha: 29 30 31 32 33 34 35 36 40 42 43 44 45 46 47 48
    49 50 51 52 53 54 58 59 64 74 75
funcion (71)
    en la izquierda: 60 61, en la derecha: 57
list_expresiones_o_cadena (72)
    en la izquierda: 62 63, en la derecha: 39 62
exp_cad (73)
    en la izquierda: 64 65, en la derecha: 62 63
constante (74)
    en la izquierda: 66 67 68 69 70 71 72 73, en la derecha: 41 56
list_expresiones (75)
    en la izquierda: 74 75, en la derecha: 60 74
tipo (76)
    en la izquierda: 76 77, en la derecha: 11 12 16
tipo_elemental (77)
    en la izquierda: 78, en la derecha: 76 77
const_list_int (78)
    en la izquierda: 79, en la derecha: 70
list_int (79)
    en la izquierda: 80 81, en la derecha: 79 80
const_list_double (80)
    en la izquierda: 82, en la derecha: 71
list_double (81)
    en la izquierda: 83 84, en la derecha: 82 83
const_list_boolean (82)
    en la izquierda: 85, en la derecha: 72
list_boolean (83)
    en la izquierda: 86 87, en la derecha: 85 86
const_list_char (84)
    en la izquierda: 88, en la derecha: 73
list_char (85)
    en la izquierda: 89 90, en la derecha: 88 89
list_id (86)
    en la izquierda: 91 92, en la derecha: 11 37 38 91


Estado 0

    0 $accept: . Programa $end

    MAIN  desplazar e ir al estado 1

    Programa           ir al estado 2
    Cabecera_programa  ir al estado 3


Estado 1

    8 Cabecera_programa: MAIN . LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS

    LEFT_PARENTHESIS  desplazar e ir al estado 4


Estado 2

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 5


Estado 3

    1 Programa: Cabecera_programa . bloque

    LEFT_KEY  desplazar e ir al estado 6

    bloque  ir al estado 7


Estado 4

    8 Cabecera_programa: MAIN LEFT_PARENTHESIS . argumentos RIGHT_PARENTHESIS

    LIST_OF      desplazar e ir al estado 8
    BASIC_TYPES  desplazar e ir al estado 9

    $default  reduce usando la regla 15 (argumentos)

    argumentos      ir al estado 10
    argumento       ir al estado 11
    tipo            ir al estado 12
    tipo_elemental  ir al estado 13


Estado 5

    0 $accept: Programa $end .

    $default  aceptar


Estado 6

    2 bloque: LEFT_KEY . Declar_de_variables_locales Declar_de_subprogs Sentencias RIGHT_KEY

    INITVAR  desplazar e ir al estado 14

    $default  reduce usando la regla 7 (Declar_de_variables_locales)

    Declar_de_variables_locales  ir al estado 15


Estado 7

    1 Programa: Cabecera_programa bloque .

    $default  reduce usando la regla 1 (Programa)


Estado 8

   77 tipo: LIST_OF . tipo_elemental

    BASIC_TYPES  desplazar e ir al estado 9

    tipo_elemental  ir al estado 16


Estado 9

   78 tipo_elemental: BASIC_TYPES .

    $default  reduce usando la regla 78 (tipo_elemental)


Estado 10

    8 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos . RIGHT_PARENTHESIS
   13 argumentos: argumentos . COMA argumento

    RIGHT_PARENTHESIS  desplazar e ir al estado 17
    COMA               desplazar e ir al estado 18


Estado 11

   14 argumentos: argumento .

    $default  reduce usando la regla 14 (argumentos)


Estado 12

   16 argumento: tipo . ID

    ID  desplazar e ir al estado 19


Estado 13

   76 tipo: tipo_elemental .

    $default  reduce usando la regla 76 (tipo)


Estado 14

    6 Declar_de_variables_locales: INITVAR . Variables_locales ENDVAR

    LIST_OF      desplazar e ir al estado 8
    BASIC_TYPES  desplazar e ir al estado 9

    Variables_locales        ir al estado 20
    Cuerpo_declar_variables  ir al estado 21
    tipo                     ir al estado 22
    tipo_elemental           ir al estado 13


Estado 15

    2 bloque: LEFT_KEY Declar_de_variables_locales . Declar_de_subprogs Sentencias RIGHT_KEY

    $default  reduce usando la regla 4 (Declar_de_subprogs)

    Declar_de_subprogs  ir al estado 23


Estado 16

   77 tipo: LIST_OF tipo_elemental .

    $default  reduce usando la regla 77 (tipo)


Estado 17

    8 Cabecera_programa: MAIN LEFT_PARENTHESIS argumentos RIGHT_PARENTHESIS .

    $default  reduce usando la regla 8 (Cabecera_programa)


Estado 18

   13 argumentos: argumentos COMA . argumento

    LIST_OF      desplazar e ir al estado 8
    BASIC_TYPES  desplazar e ir al estado 9

    argumento       ir al estado 24
    tipo            ir al estado 12
    tipo_elemental  ir al estado 13


Estado 19

   16 argumento: tipo ID .

    $default  reduce usando la regla 16 (argumento)


Estado 20

    6 Declar_de_variables_locales: INITVAR Variables_locales . ENDVAR
    9 Variables_locales: Variables_locales . Cuerpo_declar_variables

    ENDVAR       desplazar e ir al estado 25
    LIST_OF      desplazar e ir al estado 8
    BASIC_TYPES  desplazar e ir al estado 9

    Cuerpo_declar_variables  ir al estado 26
    tipo                     ir al estado 22
    tipo_elemental           ir al estado 13


Estado 21

   10 Variables_locales: Cuerpo_declar_variables .

    $default  reduce usando la regla 10 (Variables_locales)


Estado 22

   11 Cuerpo_declar_variables: tipo . list_id SEMICOLON

    ID  desplazar e ir al estado 27

    list_id  ir al estado 28


Estado 23

    2 bloque: LEFT_KEY Declar_de_variables_locales Declar_de_subprogs . Sentencias RIGHT_KEY
    3 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    LEFT_KEY          desplazar e ir al estado 6
    LEFT_BRACKET      desplazar e ir al estado 29
    IF                desplazar e ir al estado 30
    WHILE             desplazar e ir al estado 31
    RETURN            desplazar e ir al estado 32
    FOR               desplazar e ir al estado 33
    OUT               desplazar e ir al estado 34
    IN                desplazar e ir al estado 35
    LIST_OF           desplazar e ir al estado 8
    BASIC_TYPES       desplazar e ir al estado 9
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 40
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    MINUSMINUS        desplazar e ir al estado 43
    PLUSPLUS          desplazar e ir al estado 44
    DOLLAR            desplazar e ir al estado 45
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    bloque                ir al estado 47
    Declar_subprog        ir al estado 48
    Cabecera_subprograma  ir al estado 49
    Sentencias            ir al estado 50
    Sentencia             ir al estado 51
    sentencia_contador    ir al estado 52
    sentencia_asignacion  ir al estado 53
    sentencia_if          ir al estado 54
    sentencia_while       ir al estado 55
    sentencia_entrada     ir al estado 56
    sentencia_salida      ir al estado 57
    sentencia_return      ir al estado 58
    sentencia_for         ir al estado 59
    sentencia_list        ir al estado 60
    expresion             ir al estado 61
    funcion               ir al estado 62
    constante             ir al estado 63
    tipo                  ir al estado 64
    tipo_elemental        ir al estado 13
    const_list_int        ir al estado 65
    const_list_double     ir al estado 66
    const_list_boolean    ir al estado 67
    const_list_char       ir al estado 68


Estado 24

   13 argumentos: argumentos COMA argumento .

    $default  reduce usando la regla 13 (argumentos)


Estado 25

    6 Declar_de_variables_locales: INITVAR Variables_locales ENDVAR .

    $default  reduce usando la regla 6 (Declar_de_variables_locales)


Estado 26

    9 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce usando la regla 9 (Variables_locales)


Estado 27

   92 list_id: ID .

    $default  reduce usando la regla 92 (list_id)


Estado 28

   11 Cuerpo_declar_variables: tipo list_id . SEMICOLON
   91 list_id: list_id . COMA ID

    SEMICOLON  desplazar e ir al estado 69
    COMA       desplazar e ir al estado 70


Estado 29

   79 const_list_int: LEFT_BRACKET . list_int RIGHT_BRACKET
   82 const_list_double: LEFT_BRACKET . list_double RIGHT_BRACKET
   85 const_list_boolean: LEFT_BRACKET . list_boolean RIGHT_BRACKET
   88 const_list_char: LEFT_BRACKET . list_char RIGHT_BRACKET

    CONST_INT      desplazar e ir al estado 71
    CONST_DOUBLE   desplazar e ir al estado 72
    CONST_BOOLEAN  desplazar e ir al estado 73
    CONST_CHAR     desplazar e ir al estado 74

    list_int      ir al estado 75
    list_double   ir al estado 76
    list_boolean  ir al estado 77
    list_char     ir al estado 78


Estado 30

   34 sentencia_if: IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia
   35             | IF . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS THEN Sentencia ELSE Sentencia

    LEFT_PARENTHESIS  desplazar e ir al estado 79


Estado 31

   36 sentencia_while: WHILE . LEFT_PARENTHESIS expresion RIGHT_PARENTHESIS Sentencia

    LEFT_PARENTHESIS  desplazar e ir al estado 80


Estado 32

   40 sentencia_return: RETURN . expresion SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 82
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 33

   41 sentencia_for: FOR . ID ASSIGN_FOR constante TO constante DO bloque

    ID  desplazar e ir al estado 83


Estado 34

   39 sentencia_salida: OUT . list_expresiones_o_cadena SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    CADENA            desplazar e ir al estado 84
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion                  ir al estado 85
    funcion                    ir al estado 62
    list_expresiones_o_cadena  ir al estado 86
    exp_cad                    ir al estado 87
    constante                  ir al estado 63
    const_list_int             ir al estado 65
    const_list_double          ir al estado 66
    const_list_boolean         ir al estado 67
    const_list_char            ir al estado 68


Estado 35

   37 sentencia_entrada: IN . CADENA COMA list_id SEMICOLON
   38                  | IN . list_id SEMICOLON

    CADENA  desplazar e ir al estado 88
    ID      desplazar e ir al estado 27

    list_id  ir al estado 89


Estado 36

   66 constante: CONST_INT .

    $default  reduce usando la regla 66 (constante)


Estado 37

   67 constante: CONST_DOUBLE .

    $default  reduce usando la regla 67 (constante)


Estado 38

   69 constante: CONST_BOOLEAN .

    $default  reduce usando la regla 69 (constante)


Estado 39

   68 constante: CONST_CHAR .

    $default  reduce usando la regla 68 (constante)


Estado 40

   33 sentencia_asignacion: ID . ASSIGN expresion SEMICOLON
   55 expresion: ID .
   60 funcion: ID . LEFT_PARENTHESIS list_expresiones RIGHT_PARENTHESIS
   61        | ID . LEFT_PARENTHESIS RIGHT_PARENTHESIS

    ASSIGN            desplazar e ir al estado 90
    LEFT_PARENTHESIS  desplazar e ir al estado 91

    $default  reduce usando la regla 55 (expresion)


Estado 41

   45 expresion: SYMBOL_OP . expresion

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 92
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 42

   44 expresion: NEG_COUNT_QUEST . expresion

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 93
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 43

   30 sentencia_contador: MINUSMINUS . expresion SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 94
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 44

   29 sentencia_contador: PLUSPLUS . expresion SEMICOLON

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 95
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 45

   43 sentencia_list: DOLLAR . expresion

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 96
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 46

   59 expresion: LEFT_PARENTHESIS . expresion RIGHT_PARENTHESIS

    LEFT_BRACKET      desplazar e ir al estado 29
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 81
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    LEFT_PARENTHESIS  desplazar e ir al estado 46

    expresion           ir al estado 97
    funcion             ir al estado 62
    constante           ir al estado 63
    const_list_int      ir al estado 65
    const_list_double   ir al estado 66
    const_list_boolean  ir al estado 67
    const_list_char     ir al estado 68


Estado 47

   19 Sentencia: bloque .

    $default  reduce usando la regla 19 (Sentencia)


Estado 48

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce usando la regla 3 (Declar_de_subprogs)


Estado 49

    5 Declar_subprog: Cabecera_subprograma . bloque

    LEFT_KEY  desplazar e ir al estado 6

    bloque  ir al estado 98


Estado 50

    2 bloque: LEFT_KEY Declar_de_variables_locales Declar_de_subprogs Sentencias . RIGHT_KEY
   17 Sentencias: Sentencias . Sentencia

    LEFT_KEY          desplazar e ir al estado 6
    RIGHT_KEY         desplazar e ir al estado 99
    LEFT_BRACKET      desplazar e ir al estado 29
    IF                desplazar e ir al estado 30
    WHILE             desplazar e ir al estado 31
    RETURN            desplazar e ir al estado 32
    FOR               desplazar e ir al estado 33
    OUT               desplazar e ir al estado 34
    IN                desplazar e ir al estado 35
    CONST_INT         desplazar e ir al estado 36
    CONST_DOUBLE      desplazar e ir al estado 37
    CONST_BOOLEAN     desplazar e ir al estado 38
    CONST_CHAR        desplazar e ir al estado 39
    ID                desplazar e ir al estado 40
    SYMBOL_OP         desplazar e ir al estado 41
    NEG_COUNT_QUEST   desplazar e ir al estado 42
    MINUSMINUS        desplazar e ir al estado 43
    PLUSPLUS          desplazar e ir al estado 44
    DOLLAR            desplazar e ir al estado 45
    LEFT_PARENTHESIS  desplazar e ir al estado 46
